apps/authelia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
        - name: authelia
          image: ghcr.io/authelia/authelia:4.39.28
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /config
            - name: secrets
              mountPath: /secrets
      enableServiceLinks: false
      volumes:
        - name: config
          configMap:
            name: authelia-config
        - name: secrets
          secret:
            secretName: authelia-secret
